# streambot-legacy

./: .drone.yml  .flake8  .gitignore  Dockerfile  Dockerfile.local  README.md  docker-compose.yml  pyproject.toml
streambot/: __init__.py  cache.py  celery.py  constants.py  discord.py  logging.py  main.py  members.py  subscribe.py  tasks.py  twitch.py  unsubscribe.py  worker.py
streambot/commands/: flush.py
streambot/db/: __init__.py  base.py  connection.py  reservation.py  stream.py  twitch_stream.py
streambot/worker/: __init__.py
streambot/worker/tasks/: __init__.py  clear_stale_streams.py  clear_unknown_messages.py  get_streams.py  reconcile_presence.py  update_active_streams.py  update_presence_streams.py
tests/: test_streambot.py
