[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "streambot"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@aricodes.net>",]

[tool.black]
line-length = 95
target-version = [ "py39",]
experimental-string-processing = true

[tool.poetry.scripts]
streambot = "streambot.main:main"

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.14.4"
python-dotenv = "^0.19.0"
"discord.py" = "^1.7.3"
python-environ = "^0.4.54"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchgod = "^0.7"
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
