[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "streambot"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@aricodes.net>",]

[tool.black]
line-length = 95
target-version = [ "py39",]
experimental-string-processing = true

[tool.poetry.scripts]
streambot = "streambot.main:main"
flush = "streambot.commands.flush:main"

[tool.poetry.dependencies]
python = "^3.7"
peewee = "^3.14.4"
python-dotenv = "^0.19.0"
python-environ = "^0.4.54"
py-cord = "^1.7.3"
aiohttp = "^3.7.4"
redis = "^3.5.3"
python-redis-cache = "^1.1.2"
aiocache = {extras = ["redis"], version = "^0.11.1"}
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
ujson = "^5.1.0"
msgpack = "^1.0.3"
uvloop = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
watchgod = "^0.7"
black = "^21.7b0"
flake8 = "^3.9.2"
flake8-black = "^0.2.3"
